[package]
name = "watermark"
description = "A simple watermarking set for in-order insertions"
documentation = "https://docs.rs/watermark"
readme = "README.md"
version = "1.1.0"
authors = ["Pi Lanningham <pi.lanningham@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/Quantumplation/watermark"
repository = "https://github.com/Quantumplation/watermark"
keywords = ["watermark", "collection"]
categories = ["data-structures"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.3"

[dev-dependencies]
rand = "0.8.5"
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
